[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tile.png" type="Texture" id=1]
[ext_resource path="res://scripts/Players/UI/settings.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 20 )

[node name="settings" type="Node2D"]
script = ExtResource( 2 )

[node name="settings" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.533333 )
position = Vector2( 28, 565 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="settings"]
self_modulate = Color( 0.0705882, 0.117647, 0.623529, 1 )
texture = ExtResource( 1 )

[node name="minimap" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.533333 )
position = Vector2( 88, 566 )
shape = SubResource( 2 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="minimap"]
self_modulate = Color( 0.0705882, 0.623529, 0.584314, 1 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="music" type="TouchScreenButton" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.533333 )
position = Vector2( 28, 515 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="music"]
self_modulate = Color( 0.0705882, 0.117647, 0.623529, 1 )
texture = ExtResource( 1 )

[node name="sound" type="TouchScreenButton" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.533333 )
position = Vector2( 29, 464 )
shape = SubResource( 1 )
shape_centered = false

[node name="Sprite" type="Sprite" parent="sound"]
self_modulate = Color( 0.0705882, 0.117647, 0.623529, 1 )
texture = ExtResource( 1 )

[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="minimap" to="." method="_on_minimap_pressed"]
[connection signal="pressed" from="music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="sound" to="." method="_on_sound_pressed"]
